subscribe location updates on demand, updated layout for current location info.

--- a/solution/MarathonTracker/app/src/main/res/layout/activity_main.xml
+++ b/solution/MarathonTracker/app/src/main/res/layout/activity_main.xml
@@ -18,110 +18,128 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
-    <android.support.v7.widget.GridLayout
-        android:id="@+id/grid_layout_current_location_main_activity"
+    <LinearLayout
+        android:id="@+id/layout_location_updates_main_activity"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_main_activity">
 
-        <TextView
-            android:id="@+id/latitude_text_main_activity"
-            android:layout_width="wrap_content"
+        <Switch
+            android:id="@+id/request_location_updates_switch"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/latitude"
-            app:layout_columnWeight="1"
-            app:layout_gravity="end" />
+            android:layout_weight="1"
+            android:onClick="switchRequestLocationUpdates"
+            android:text="@string/request_location_updates" />
 
-        <TextView
-            android:id="@+id/latitude_value_text_main_activity"
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_current_location_info_main_activity"
+        android:layout_width="344dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:baselineAligned="false"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_location_updates_main_activity">
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/default_float_value"
-            android:textAlignment="textEnd"
-            app:layout_column="1"
-            app:layout_columnWeight="1"
-            app:layout_row="0" />
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/element_horizontal_margin"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/longitude_text_main_activity"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/latitude"
+                android:textAlignment="textEnd" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/longitude"
+                android:textAlignment="textEnd" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/longitude"
-            app:layout_column="0"
-            app:layout_columnWeight="1"
-            app:layout_gravity="end"
-            app:layout_row="1" />
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/element_horizontal_margin"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/longitude_value_text_main_activity"
+            <TextView
+                android:id="@+id/latitude_value_text_main_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/default_float_value" />
+
+            <TextView
+                android:id="@+id/longitude_value_text_main_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/default_float_value" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/default_float_value"
-            android:textAlignment="textEnd"
-            app:layout_column="1"
-            app:layout_columnWeight="1"
-            app:layout_row="1" />
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/element_horizontal_margin"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/speed_text_main_activity"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/speed"
+                android:textAlignment="textEnd" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/bearing"
+                android:textAlignment="textEnd" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/speed"
-            app:layout_column="2"
-            app:layout_columnWeight="1"
-            app:layout_gravity="end"
-            app:layout_row="0" />
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/element_horizontal_margin"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/speed_value_text_main_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/default_float_value"
-            app:layout_column="3"
-            app:layout_columnWeight="1"
-            app:layout_row="0" />
+            <TextView
+                android:id="@+id/speed_value_text_main_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/default_float_value" />
 
-        <TextView
-            android:id="@+id/bearing_text_main_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/bearing"
-            app:layout_column="2"
-            app:layout_columnWeight="1"
-            app:layout_gravity="end"
-            app:layout_row="1" />
+            <TextView
+                android:id="@+id/bearing_value_text_main_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/default_float_value" />
 
-        <TextView
-            android:id="@+id/bearing_value_text_main_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/element_horizontal_margin"
-            android:layout_marginRight="@dimen/element_horizontal_margin"
-            android:text="@string/default_float_value"
-            app:layout_column="3"
-            app:layout_columnWeight="1"
-            app:layout_row="1" />
+        </LinearLayout>
 
-    </android.support.v7.widget.GridLayout>
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/checkpoints_recycler_view_main_activity"
@@ -136,6 +154,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/grid_layout_current_location_main_activity" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_current_location_info_main_activity" />
 
 </android.support.constraint.ConstraintLayout>
