--- a/solution/MarathonTracker/app/src/main/res/layout/activity_main.xml
+++ b/solution/MarathonTracker/app/src/main/res/layout/activity_main.xml
@@ -166,9 +166,11 @@
         android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkpoints_recycler_view_main_activity">
+        app:layout_constraintTop_toBottomOf="@+id/checkpoints_recycler_view_main_activity"
+        app:layout_constraintVertical_bias="0.666">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/test_recycler_view_tracks"
@@ -227,6 +229,7 @@
                 style="?buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="testClearDb"
                 android:text="Clear db" />
         </LinearLayout>
     </LinearLayout>
