changed CheckpointAdapter to work with cursor.

--- a/solution/MarathonTracker/app/src/main/res/layout/checkpoint_view.xml
+++ b/solution/MarathonTracker/app/src/main/res/layout/checkpoint_view.xml
@@ -2,7 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical">
+              android:orientation="horizontal">
+
+    <CheckBox
+        android:id="@+id/is_checked_checkpoint_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/name_checkpoint_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/latitude_checkpoint_text"
@@ -14,7 +24,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/time_checkpoint_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/colorViewBorder" />
