--- a/solution/MarathonTracker/app/src/main/res/layout/activity_main.xml
+++ b/solution/MarathonTracker/app/src/main/res/layout/activity_main.xml
@@ -154,37 +154,38 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_current_location_info_main_activity" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/tracks_recycler_view_main_activity"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/TEST"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.298"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/checkpoints_recycler_view_main_activity">
+    </android.support.v7.widget.RecyclerView>
+
     <!-- testing -->
 
     <LinearLayout
         android:id="@+id/TEST"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkpoints_recycler_view_main_activity"
-        app:layout_constraintVertical_bias="0.666">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/test_recycler_view_tracks"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
-        </android.support.v7.widget.RecyclerView>
+        >
 
         <LinearLayout
             android:id="@+id/test_layout_button_bar"
@@ -210,7 +211,7 @@
                 android:text="Add" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/test_load_track"
                 style="?buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
