disable checkbox manipulation in both track and checkpoint views.

--- a/solution/MarathonTracker/app/src/main/res/layout/checkpoint_view.xml
+++ b/solution/MarathonTracker/app/src/main/res/layout/checkpoint_view.xml
@@ -7,7 +7,8 @@
     <CheckBox
         android:id="@+id/is_checked_checkpoint_checkBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:clickable="false" />
 
     <TextView
         android:id="@+id/name_checkpoint_text"
